Fixed an issue with the .level class not working properly on Safari

--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -46,10 +46,6 @@ body {
   .levelItem {
     display: flex;
     align-items: center;
-
-    &:not(.isNarrow) {
-      flex: 1;
-    }
   }
 
   .levelLeft {
